# smsggrecomp

./: .gitignore  ACCURACY.md  CLAUDE.md  DEBUG.md  PRINCIPLES.md  README.md  SLJIT.md  SMS_GG_ACCURACY_BURNDOWN.md  STATUS.md
accuracy/: SMSREF_PLAN.md  audio.md
recompiler/: CMakeLists.txt
recompiler/src/: code_generator.c  code_generator.h  function_finder.c  function_finder.h  game_config.c  game_config.h  main_sms.c  rom_parser.c  rom_parser.h  z80_decoder.c  z80_decoder.h
runner/: game_layout.h  game_spec.h  glue.c  glue.h  host_sdl.c  host_sdl.h  main.c  png_write.h
runner/audio/: sn76489.c  sn76489.h
runner/include/: sms_clocks.h  sms_runtime.h  z80_ops.h
runner/jit/: jit_abi.h  shard_jit.c  shard_jit.h  z80_sljit.c  z80_sljit.h  z80_sljit_helpers.c
runner/jit/tests/: sljit_smoke.c  z80_sljit_call.c  z80_sljit_cf.c  z80_sljit_diff.c
runner/video/: sms_vdp.c  sms_vdp.h
tests/: frontend_selftest.c  rom_dump.c  z80_decoder_selftest.c  z80_ops_selftest.c
tools/audio/: _probe_static_interp.py  audio_diff.py  selftest.py
tools/oracle/: _mesen_probe.lua  cyc_compare.py  mesen_cyc_watch.lua  mesen_state_dump.lua  mesen_trace.lua  mesen_vdp_dump.lua  psg_analyze.py  state_diff.py  vdp_diff.py
tools/smsref/: README.md  build.ps1  osd.h  smsref.c  smsref_client.py  synth_ours.c
